# corporate.profilex

./: README.md  app.py  pyproject.toml
agents/: summarizer_agent.py
ingestion/loaders/: web_loader.py
src/: config.py
src/agents/: insights_agent.py  parser_agent.py  scraper_agent.py
src/core/: agent_manager.py  name_normalizer.py  pipeline_orchestrator.py
src/data/: company_list.json
src/ingestion/: scrap_engine.py
src/ingestion/loaders/: file_loader.py
src/storage/: blob_store.py  duckdb_store.py
src/ui/: landing_page.py  landing_page_old.py
src/ui/assets/: style.css
src/ui/components/: diagram_viewer.py  progress_stream.py
src/ui/services/: autocomplete_engine.py
storage/: vector_store.py
tests/: test_ingestion.py  test_ui.py
ui/: landing_page.py
ui/components/: footer.py
utils/: name_cleaner.py
